--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 }
 .mySlides {
     position: relative;
+    width: 100%;
     margin: auto;
     max-width: 1000px;
 }
@@ -11,6 +12,11 @@
 }
 img {
     width: 100%;
+    height: 650px;
+    margin: auto;
+    box-shadow: 0 0 50px 5px;
+    border: 1px solid white;
+    
 }
 .prev, .next {
     cursor: pointer;
@@ -19,27 +25,28 @@ img {
     width: auto;
     margin-top: -22px;
     padding: 15px;
+    border: 1px solid grey;
+    background-color: gray;
     border-radius: 50px;
-  
-    font-size: 16px;
+    color: black;
+    font-size: 18px;
     font-weight: 700;
-    opacity: 0;
-    transition: opacity 0.5s ease;
+    opacity: 0.5;
     user-select: none;
+}
+.prev:hover, .next:hover {
+    opacity: 1;
 }
 .next{
     right: 0;
     border-radius: 50px;
 }
-.prev:hover, .next:hover{
-    opacity: 1;
 
-}
 .dot {
     cursor: pointer;
     height: 15px;
     width: 15px;
-    margin: 0 2px;
+    margin: auto;
     background-color: #bbb;
     border-radius: 50%;
     display: inline-block;
@@ -53,7 +60,7 @@ img {
     animation-duration: 1.5s ease;
 }
 @keyframes fade {
-    from {opacity: 5;}
+    from {opacity: .5;}
     to {opacity: 1;}
 
 }
