--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 * {
     box-sizing: border-box;
 }
+body {
+    background-image: url("texture.jpg");
+    background-position: center;
+    background-size: cover;
+}
 .mySlides {
     position: relative;
     width: 100%;
@@ -10,12 +15,28 @@
 .slide {
     display: none;
 }
+p {
+    position: absolute;
+    top: 0%;
+    padding: 12px 10px;
+    text-align: center;
+    background-color: gray;
+    color: black;
+    border: none;
+    border-radius: 0 0 5px 0;
+    opacity: 0.7;
+    font-size: 16px;
+    font-family: cursive;
+    font-weight: 700;
+    margin: 0 auto;
+}
 img {
     width: 100%;
-    height: 650px;
+    height:700px;
     margin: auto;
     box-shadow: 0 0 50px 5px;
     border: 1px solid white;
+    vertical-align: middle;
     
 }
 .prev, .next {
@@ -30,7 +51,7 @@ img {
     border-radius: 50px;
     color: black;
     font-size: 18px;
-    font-weight: 700;
+    font-weight: bold;
     opacity: 0.5;
     user-select: none;
 }
@@ -44,6 +65,7 @@ img {
 
 .dot {
     cursor: pointer;
+    text-align: center;
     height: 15px;
     width: 15px;
     margin: auto;
@@ -51,6 +73,9 @@ img {
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.5s ease;
+}
+.btn {
+    text-align: center;
 }
 .active, .dot:hover{
     background-color: grey;
@@ -60,7 +85,7 @@ img {
     animation-duration: 1.5s ease;
 }
 @keyframes fade {
-    from {opacity: .5;}
+    from {opacity: .4;}
     to {opacity: 1;}
 
 }
