--- a/style.css
+++ b/style.css
@@ -89,3 +89,98 @@ img {
     to {opacity: 1;}
 
 }
+
+@media screen  and ( max-width : 650px ){
+    * {
+        box-sizing: border-box;
+    }
+    body {
+        background-image: url("texture.jpg");
+        background-position: center;
+        background-size: cover;
+    }
+    .mySlides {
+        position: relative;
+        width: 100%;
+        margin: auto;
+        max-width: 1000px;
+    }
+    .slide {
+        display: none;
+    }
+    p {
+        position: absolute;
+        top: 0%;
+        padding: 12px 10px;
+        text-align: center;
+        background-color: gray;
+        color: black;
+        border: none;
+        border-radius: 0 0 5px 0;
+        opacity: 0.7;
+        font-size: 16px;
+        font-family: cursive;
+        font-weight: 700;
+        margin: 0 auto;
+    }
+    img {
+        width: 100%;
+        height:700px;
+        margin: auto;
+        box-shadow: 0 0 50px 5px;
+        border: 1px solid white;
+        vertical-align: middle;
+        
+    }
+    .prev, .next {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        width: auto;
+        margin-top: -22px;
+        padding: 15px;
+        border: 1px solid grey;
+        background-color: gray;
+        border-radius: 50px;
+        color: black;
+        font-size: 18px;
+        font-weight: bold;
+        opacity: 0.5;
+        user-select: none;
+    }
+    .prev:hover, .next:hover {
+        opacity: 1;
+    }
+    .next{
+        right: 0;
+        border-radius: 50px;
+    }
+    
+    .dot {
+        cursor: pointer;
+        text-align: center;
+        height: 15px;
+        width: 15px;
+        margin: auto;
+        background-color: #bbb;
+        border-radius: 50%;
+        display: inline-block;
+        transition: background-color 0.5s ease;
+    }
+    .btn {
+        text-align: center;
+    }
+    .active, .dot:hover{
+        background-color: grey;
+    }
+    .fade {
+        animation-name: fade;
+        animation-duration: 1.5s ease;
+    }
+    @keyframes fade {
+        from {opacity: .4;}
+        to {opacity: 1;}
+    
+    }
+
+}
